# app/Interfaces/Http/Requests/Auth/LoginRequest.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Interfaces\Http\Requests\Auth;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class LoginRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'email' => ['required', 'email'],
+            'password' => ['required', 'string'],
+        ];
+    }
+}
